feat: update styles

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,14 +1,16 @@
+$primary: #005d4e;
+$accent: #34d399;
+
 $theme-colors: (
-    "light":      #efebd6,
+    "light": #efebd6,
     // "dark":       #37075f,
-    "dark":       #222,
-    "primary":    #5f3713,
-    "primary-light": #a36d5b,
-    "secondary":  #13705f,
-    "info":       #aecdea,
-    "success":    #00aa5e,
-    "warning":    #f5a623,
-    "danger":     #bd1410,
+    "dark": #222,
+    "primary": $primary,
+    "accent": $accent,
+    "info": #aecdea,
+    "success": #00aa5e,
+    "warning": #f5a623,
+    "danger": #bd1410,
 );
 
 $enable-negative-margins: true;
@@ -16,4 +18,12 @@ $enable-negative-margins: true;
 // $form-check-input-checked-bg-color: #929d04;
 // $form-check-input-checked-border-color: #929d04;
 
+$body-bg-dark: #111827;
+$body-secondary-bg-dark: #1f2937;
+$modal-backdrop-opacity: 0.8;
+
 @import '../../node_modules/bootstrap/scss/bootstrap';
+
+:root {
+    user-select: none;
+}
