--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,10 +1,8 @@
 .main {
+  flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   align-items: center;
-  padding: 1rem 6rem;
-  min-height: 100vh;
 }
 
 .description {
@@ -223,11 +221,5 @@
 
   to {
     transform: rotate(0deg);
-  }
-}
-
-@media (max-width: 767px) {
-  .main {
-    padding: 1rem;
   }
 }
