--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,22 +4,33 @@
   --app-invalid: #d9534f;
   --app-btn-disabled: #b7a99a;
   --app-input-radius: 0.25rem;
+
+  --bg-color: #ffffff;
 }
 
 html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  font-family: 'Inter';
+}
+
+.app-layout-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100dvh;
+  background-color: var(--bg-color);
 }
 
 .header {
   display: flex;
   justify-content: center;
-  padding: 20px;
+  padding: 0.5rem 1rem;
+  box-shadow: 0 0.125rem 0.25rem 0 rgba(0, 0, 0, 0.05);
+  z-index: 10;
 }
 
 .header-container {
-  max-width: 1200px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -33,10 +44,6 @@ body {
   justify-content: center;
   gap: 0.5rem;
   text-decoration: none;
-}
-
-.brand-item img {
-  object-fit: contain;
 }
 
 .brand-item h1 {
@@ -59,14 +66,16 @@ body {
   justify-content: space-between;
   align-items: center;
   gap: 10px;
+  padding-block: 0.5rem;
 }
 
 .action-container-item {
-  border: 1px solid #5f3713;
+  border: 1px solid rgb(var(--bs-accent-rgb));
+  color: rgba(var(--bs-accent-rgb));
   border-radius: 100%;
   padding: 5px;
-  width: 40px;
-  height: 40px;
+  width: 32px;
+  height: 32px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -78,16 +87,12 @@ body {
 .action-container-item.login span {
   display: none;
   margin-left: 8px;
-  color: #5f3713;
   white-space: nowrap;
 }
 
-.action-container-item.cart-button:hover {
-  background: #5f3713;
-}
-
-.action-container-item.cart-button:hover svg {
-  color: white;
+.action-container-item:hover {
+  background: rgba(var(--bs-accent-rgb));
+  color: black;
 }
 
 .action-container-item:active {
@@ -101,9 +106,8 @@ body {
 }
 
 .action-container svg {
-  width: 24px;
-  height: 24px;
-  color: #5f3713;
+  width: 1.25rem;
+  height: 1.25rem;
 }
 
 a {
@@ -118,7 +122,6 @@ body {
 }
 
 footer {
-  background: #000;
   color: white;
   display: flex;
   justify-content: center;
@@ -156,7 +159,7 @@ footer {
   width: 40px;
   height: 40px;
   border-radius: 8px;
-  background-color: #2e2829;
+  background-color: #ffffff20;
   cursor: pointer;
 }
 
@@ -203,20 +206,23 @@ footer {
 }
 
 .products-list {
+  flex: 1;
   display: flex;
   flex-direction: column;
   justify-items: center;
-  width: 80%;
+  padding: 3rem 1.5rem;
+  width: 100%;
+  gap: 1rem;
 }
 
 .product-card {
   display: flex;
-  flex-direction: row;
-  background-color: white;
+  flex-direction: column;
   border-radius: 15px;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 0.25rem rgba(0, 0, 0, 0.1);
   max-width: 100%;
   width: 100%;
+  border: 1px solid var(--bs-gray-800);
 }
 
 .product-card-modal {
@@ -228,7 +234,7 @@ footer {
 }
 
 .product-card .product-info {
-  padding: 0.5rem 1rem;
+  padding: 1rem;
 }
 
 .product-info {
@@ -241,12 +247,20 @@ footer {
 .product-title {
   font-size: 1.5em;
   margin-bottom: 0.5rem;
+  color: rgb(var(--bs-accent-rgb));
 }
 
 .product-description {
-  color: #777;
   font-size: 1em;
   margin-bottom: 0.5rem;
+}
+
+.line-clamp-2 {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .product-colors {
@@ -277,15 +291,17 @@ footer {
 }
 
 .product-price {
+  color: rgb(var(--bs-primary-rgb));
   font-size: 1.5em;
+  font-weight: 700;
   margin-bottom: 20px;
 }
 
 .buy-button {
-  background-color: #333;
+  background-color: rgb(var(--bs-primary-rgb));
   color: white;
   border: none;
-  padding: 15px 30px;
+  padding: 0.75rem 1.5rem;
   font-size: 1em;
   border-radius: 5px;
   cursor: pointer;
@@ -305,22 +321,20 @@ footer {
   flex: 1;
   position: relative;
   display: flex;
-  flex-direction: column;
   align-items: center;
+  max-width: 576px;
 }
 
 .product-image-container {
-  aspect-ratio: 2 / 3;
   position: relative;
   width: 100%;
-  height: auto;
+  height: 300px;
+  text-align: center;
 }
 
 .product-image img {
-  width: 100%;
-  height: auto;
   border-radius: 8px;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 .add-to-bag {
@@ -373,11 +387,13 @@ footer {
   width: 70%;
   padding: 20px;
   border-radius: 8px;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 0.25rem rgba(0, 0, 0, 0.1);
+  border: 1px solid rgba(var(--bs-accent-rgb), 0.3);
+  background-color: rgb(var(--bs-secondary-bg-rgb));
 }
 
-.cart h1 {
-  margin-bottom: 20px;
+.cart h2 {
+  color: rgb(var(--bs-accent-rgb));
 }
 
 .cart-item {
@@ -407,7 +423,6 @@ footer {
 .item-options {
   display: flex;
   align-items: center;
-  margin-top: 10px;
   justify-content: space-between;
 }
 
@@ -421,7 +436,7 @@ footer {
   align-items: center;
   justify-content: space-around;
   gap: 15px;
-  border: 1px solid #ddd;
+  border: 1px solid var(--bs-gray-200);
   border-radius: 8px;
   overflow: hidden;
 }
@@ -442,7 +457,6 @@ footer {
   text-align: center;
   vertical-align: middle;
   justify-content: center;
-  background: rgb(var(--color-gray-900));
   color: white;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
@@ -474,11 +488,13 @@ footer {
   width: 30%;
   padding: 20px;
   border-radius: 8px;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 0.25rem rgba(0, 0, 0, 0.1);
+  border: 1px solid rgba(var(--bs-accent-rgb), 0.3);
+  background-color: rgb(var(--bs-secondary-bg-rgb));
 }
 
 .summary h2 {
-  margin-bottom: 20px;
+  color: rgb(var(--bs-accent-rgb));
 }
 
 .delivery-options {
@@ -508,7 +524,7 @@ footer {
 
 .promo-section button {
   padding: 8px;
-  background-color: #5f3713;
+  background-color: rgb(var(--bs-primary-rgb));
   color: white;
   border: none;
   cursor: pointer;
@@ -535,7 +551,7 @@ footer {
 }
 
 .checkout-btn {
-  background-color: #5f3713;
+  background-color: rgb(var(--bs-primary-rgb));
   color: white;
   border-radius: 8px;
 }
@@ -553,14 +569,23 @@ footer {
 
 .continue-btn {
   background-color: transparent;
-  color: #5f3713;
+  color: rgb(var(--bs-primary-rgb));
 }
 
 .login-form {
+  background-color: var(--bs-secondary-bg);
+  border: 1px solid var(--bs-gray-800);
   border-radius: 8px;
-  padding: 50px 40px;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-  width: 350px;
+  padding: 3rem 2.5rem;
+  box-shadow: 0 0 0.25rem rgba(0, 0, 0, 0.1);
+  width: 100%;
+  max-width: 576px;
+}
+
+@media (max-width: 768px) {
+  .login-form {
+    padding: 2rem 1rem;
+  }
 }
 
 .form-input-material {
@@ -583,26 +608,7 @@ footer {
 }
 
 .form-input-material input:focus {
-  border: 1px solid #5f3713;
-}
-
-.login-btn {
-  width: 100%;
-  border: 1px solid #5f3713;
-  background: transparent;
-  border-radius: var(--app-input-radius);
-  padding: 0.5rem;
-  font-weight: bold;
-  cursor: pointer;
-  color: white;
-  background: #5f3713;
-}
-
-.login-btn:disabled,
-button:disabled {
-  background-color: var(--app-btn-disabled) !important;
-  border-color: var(--app-btn-disabled) !important;
-  cursor: 'not-allowed'
+  border: 1px solid rgb(var(--bs-primary-rgb));
 }
 
 .switch {
@@ -649,8 +655,7 @@ input:checked+.switch:active::before {
 }
 
 .customer-data-container {
-  background: #5f3713;
-  color: white;
+  background: rgb(var(--bs-primary-rgb));
   padding: 15px;
   border-radius: 5px;
   display: flex;
@@ -666,7 +671,7 @@ input:checked+.switch:active::before {
   display: flex;
   flex-direction: column;
   gap: 8px;
-  margin-top: 8px;
+  margin-block: 1rem;
 }
 
 .payment-method-container {
@@ -674,7 +679,7 @@ input:checked+.switch:active::before {
   justify-content: space-between;
   align-items: center;
   padding: 12px 15px;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 0.25rem rgba(0, 0, 0, 0.1);
   border-radius: 8px;
   height: 50px;
 }
@@ -684,7 +689,7 @@ input:checked+.switch:active::before {
 }
 
 .payment-method-container input {
-  accent-color: #5f3713;
+  accent-color: rgb(var(--bs-primary-rgb));
 }
 
 .thanks-container {
@@ -693,19 +698,17 @@ input:checked+.switch:active::before {
   justify-content: center;
   align-items: center;
   text-align: center;
+  margin: 3rem 1.5rem;
 }
 
 .thanks-container h1 {
   font-family: "Kaushan Script", cursive;
-  color: #5f3713;
+  color: rgb(var(--bs-accent-rgb));
   font-size: 60px;
+  margin-bottom: 2rem;
 }
 
 @media (max-width: 767px) {
-  .product-card {
-    display: flex;
-    flex-direction: column-reverse;
-  }
 
   .product-card-modal {
     display: flex;
@@ -732,7 +735,7 @@ input:checked+.switch:active::before {
     z-index: 100000;
   } */
   .cart-container {
-    padding: 0px;
+    padding: 1rem;
     flex-direction: column;
   }
 
@@ -793,7 +796,6 @@ input:checked+.switch:active::before {
 
 .content {
   min-height: 100dvh;
-  background: #e3e6e8;
   display: flex;
 }
 
@@ -804,7 +806,6 @@ input:checked+.switch:active::before {
 }
 
 .sidebar {
-  background: #ffffff;
   position: fixed;
   top: 0;
   left: 0;
@@ -817,6 +818,7 @@ input:checked+.switch:active::before {
   gap: 30%;
   padding-top: 20px;
   box-shadow: 0px 1px 1px 1px rgba(181, 181, 181, 0.38);
+  background-color: var(--bs-body-bg);
 }
 
 .sidebar .logo .icon {
@@ -848,17 +850,17 @@ input:checked+.switch:active::before {
 
 .sidebar nav .menu-options li.selected,
 .sidebar nav .menu-options li:hover {
-  background: #5f3713;
-  color: #ffffff;
+  background: rgba(var(--bs-accent-rgb), 0.2);
+  color: rgb(var(--bs-accent-rgb));
 }
 
 .sidebar nav .menu-options li a {
-  color: var(--bs-secondary-color)
+  color: var(--bs-gray-400)
 }
 
 .sidebar nav .menu-options li.selected a,
 .sidebar nav .menu-options li:hover a {
-  color: #ffffff;
+  color: rgb(var(--bs-accent-rgb));
 }
 
 .sidebar nav .menu-options li:hover {
@@ -870,7 +872,7 @@ input:checked+.switch:active::before {
 }
 
 .sidebar nav .menu-options .icon svg {
-  color: #5f3713;
+  color: rgb(var(--bs-primary-rgb));
 }
 
 .sidebar .more-options {
@@ -890,15 +892,16 @@ input:checked+.switch:active::before {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background: #ffffff;
-  box-shadow: 0px 1px 1px 1px rgba(181, 181, 181, 0.38);
-  border-top-right-radius: calc(35px - 26px);
   height: 70px;
+  border: 1px solid var(--bs-gray-800);
+  background-color: var(--bs-body-bg);
 }
 
 .main-content .app header.sub-menu .title {
+  font-size: 1.25rem;
   font-weight: bold;
   margin-left: 20px;
+  color: rgb(var(--bs-accent-rgb));
 }
 
 .main-content .app header.sub-menu .menu {
@@ -919,14 +922,14 @@ input:checked+.switch:active::before {
 
 .main-content .app header.sub-menu .menu li.selected,
 .main-content .app header.sub-menu .menu li:hover {
-  color: #5f3713;
+  color: rgb(var(--bs-primary-rgb));
   position: relative;
 }
 
 .main-content .app header.sub-menu .menu li.selected:after,
 .main-content .app header.sub-menu .menu li:hover:after {
   content: "";
-  border-bottom: 5px solid #5f3713;
+  border-bottom: 5px solid rgb(var(--bs-primary-rgb));
   position: absolute;
   bottom: 0;
   width: 100%;
@@ -945,21 +948,14 @@ input:checked+.switch:active::before {
   margin: 0 8px;
   padding: 10px;
   border-radius: 5px;
-  box-shadow: 0px 1px 1px 1px rgba(181, 181, 181, 0.38);
   position: relative;
 }
 
 .main-content .app header.sub-menu .user-options .icon.user-img {
   padding: 5px;
-  border: none;
   display: flex;
   align-items: center;
   gap: 5px;
-}
-
-.main-content .app header.sub-menu .user-options .icon.user-img:hover {
-  color: red;
-  cursor: pointer;
 }
 
 .main-content .app header.sub-menu .user-options .icon.user-img img {
@@ -967,10 +963,6 @@ input:checked+.switch:active::before {
 }
 
 .main-content .app .app-content {
-  margin: 20px;
-  background: #ffffff;
-  border-radius: 8px;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
   flex: 1;
 }
 
@@ -1064,7 +1056,7 @@ input:checked+.switch:active::before {
   flex-direction: column;
   text-align: left;
   border-radius: 5px;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 0.25rem rgba(0, 0, 0, 0.1);
   user-select: none;
   width: 285px;
 }
@@ -1203,12 +1195,12 @@ input:checked+.switch:active::before {
 }
 
 .terms-container a {
-  color: #5f3713;
+  color: rgb(var(--bs-primary-rgb));
   font-weight: bold;
 }
 
 .target-anchor {
-  color: #5f3713;
+  color: rgb(var(--bs-primary-rgb));
   font-weight: bold;
 }
 
@@ -1221,7 +1213,7 @@ input:checked+.switch:active::before {
   bottom: 1.5rem;
   right: 1.5rem;
   background-color: #72da67;
-  border: 1px solid gray;
+  border: 1px solid var(--bs-gray-200);
   border-radius: 100%;
   padding: 5px;
   width: 60px;
@@ -1234,7 +1226,7 @@ input:checked+.switch:active::before {
   padding: 7px;
   width: 70px;
   height: 70px;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 0.25rem rgba(0, 0, 0, 0.1);
 }
 
 .toast {
@@ -1253,7 +1245,7 @@ input:checked+.switch:active::before {
   transform: translateX(150%);
   animation: 4s ease-in-out slide-in;
 
-  border-left: 5px solid #5f3713;
+  border-left: 5px solid rgb(var(--bs-primary-rgb));
 }
 
 .toast i {
@@ -1277,7 +1269,7 @@ input:checked+.switch:active::before {
 
 .home-card {
   flex: 1;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 0.25rem rgba(0, 0, 0, 0.1);
   padding: 10px;
   border-radius: 8px;
   display: flex;
@@ -1285,6 +1277,13 @@ input:checked+.switch:active::before {
   gap: 10px;
   justify-content: space-between;
   min-height: 90px;
+  color: var(--bs-emphasis-color);
+  border: 1px solid var(--bs-gray-800);
+  background-color: var(--bs-secondary-bg);
+}
+
+.home-card h4 {
+  color: rgb(var(--bs-accent-rgb));
 }
 
 .home-card:nth-child(3) {
@@ -1295,22 +1294,6 @@ input:checked+.switch:active::before {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-}
-
-.products {
-  color: white;
-  background: #5f3713;
-}
-
-.purchases {
-  color: #5f3713;
-  background: white;
-}
-
-.stock {
-  color: #5f3713;
-  background: white;
-  border: 2px solid #5f3713;
 }
 
 .form-setings {
@@ -1330,7 +1313,7 @@ input:checked+.switch:active::before {
 .form-item-group input {
   border: none;
   background: none;
-  border-bottom: 2px solid #5f3713;
+  border-bottom: 2px solid rgb(var(--bs-primary-rgb));
   outline: none;
 }
 
@@ -1376,13 +1359,14 @@ input:checked+.switch:active::before {
 }
 
 .heading-row span {
+  color: rgb(var(--bs-accent-rgb));
   font-weight: bold;
   font-size: 24px;
 }
 
 /* .heading-row button {
   color: white;
-  background: #5f3713;
+  background: rgb(var(--bs-primary-rgb));
   border: none;
   border-radius: 6px;
   padding: 8px;
@@ -1406,7 +1390,7 @@ input:checked+.switch:active::before {
   background: none;
   border: none;
   outline: none;
-  border-bottom: 2px solid #5f3713;
+  border-bottom: 2px solid rgb(var(--bs-primary-rgb));
 }
 
 .form-content-container {
@@ -1418,7 +1402,7 @@ input:checked+.switch:active::before {
 
 .submit-button {
   color: white;
-  background: #5f3713;
+  background: rgb(var(--bs-primary-rgb));
   border: none;
   border-radius: 6px;
   padding: 8px;
@@ -1441,7 +1425,7 @@ input:checked+.switch:active::before {
 .pagination-container ul button {
   padding: 10px;
   margin: 1px 3px;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 0.25rem rgba(0, 0, 0, 0.1);
   border: 0.5px;
   background: none;
   border-radius: 4px;
@@ -1449,7 +1433,7 @@ input:checked+.switch:active::before {
 }
 
 .pagination-container ul button.current-page-button {
-  background: #5f3713;
+  background: rgb(var(--bs-primary-rgb));
   color: white;
 }
 
@@ -1483,8 +1467,8 @@ input:checked+.switch:active::before {
 }
 
 .continue-to-cart-container .buttons-row button:nth-child(1) {
-  border: 1px solid #5f3713;
-  color: #5f3713;
+  border: 1px solid var(--bs-gray-200);
+  color: rgb(var(--bs-primary-rgb));
   background: none;
   border-radius: 5px;
 }
@@ -1492,7 +1476,7 @@ input:checked+.switch:active::before {
 .continue-to-cart-container .buttons-row button:nth-child(2) {
   border: none;
   color: white;
-  background: #5f3713;
+  background: rgb(var(--bs-primary-rgb));
   border-radius: 5px;
 }
 
@@ -1503,7 +1487,7 @@ input:checked+.switch:active::before {
   align-items: center;
   background-color: none;
   background: none;
-  color: #5f3713;
+  color: rgb(var(--bs-primary-rgb));
   padding: 10px;
   font-weight: bold;
 }
@@ -1521,7 +1505,7 @@ input:checked+.switch:active::before {
   width: 48px;
   height: 48px;
   border-radius: 50%;
-  border: 2px solid #5f3713;
+  border: 2px solid rgb(var(--bs-primary-rgb));
   position: absolute;
   left: 0;
   top: 0;
@@ -1542,7 +1526,7 @@ input:checked+.switch:active::before {
 
 .download-btn {
   color: white;
-  background: #5f3713;
+  background: rgb(var(--bs-primary-rgb));
   border: none;
   border-radius: 6px;
   padding: 8px;
@@ -1591,11 +1575,6 @@ input:checked+.switch:active::before {
 
   .home-card:nth-child(3) {
     grid-column: 1;
-  }
-
-  .home-card-row {
-    flex-direction: column;
-    justify-content: space-between;
   }
 
   .form-setings {
